Aligning TFL status symbols a hornet's nest. Asteroid widget fixed, new URL (fireball API).

--- a/css/style.css
+++ b/css/style.css
@@ -1419,8 +1419,10 @@ input[type="checkbox"]:checked + label:before {
     }
 
     .interruptions-text-title {
-        font-size: 2em;
+        font-size: 4em;
+        line-height: .9em;
     }
+    
     .interruptions {
         font-size: .9em;
     }
